--- a/jupyterlab_crosscompute/style/base.css
+++ b/jupyterlab_crosscompute/style/base.css
@@ -1,3 +1,21 @@
 .crosscompute-Automation {
   background: var(--jp-layout-color1);
+  padding: 8px 12px;
+}
+
+.crosscompute-AutomationHeader {
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+.crosscompute-AutomationName {
+  font-size: large;
+}
+
+.crosscompute-AutomationVersion {
+}
+
+.crosscompute-AutomationEdit {
+  color: blue;
+  text-decoration: underline;
 }
