Define automationBody.onUpdate

--- a/jupyterlab_crosscompute/style/base.css
+++ b/jupyterlab_crosscompute/style/base.css
@@ -17,5 +17,9 @@
 
 .crosscompute-AutomationEdit {
   color: blue;
+}
+
+.crosscompute-AutomationEdit:hover {
+  color: blue;
   text-decoration: underline;
 }
