--- a/jupyterlab_crosscompute/style/base.css
+++ b/jupyterlab_crosscompute/style/base.css
@@ -7,6 +7,10 @@
   color: var(--jp-ui-font-color1);
 }
 
+.crosscompute-Automation button:hover {
+  color: var(--jp-ui-font-color1);
+}
+
 .crosscompute-AutomationInformation > * + * {
   margin-top: 1em;
 }
