Save open files before starting launch

--- a/style/base.css
+++ b/style/base.css
@@ -47,6 +47,7 @@
   background: var(--jp-inverse-layout-color2);
   color: var(--jp-ui-inverse-font-color0);
   width: 100%;
+  max-height: 50vh;
   overflow: auto;
 }
 
